pp2/samples/tested/control.decaf.test

*** Error line 16.
  for (; a <= 10 || done; a = a + 1) {
       ^
*** syntax error

